--- a/sites/uncategorized/source/blog/blog-posts/2022-09-22-introducing-the-infrastructure-bill-of-materials.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-09-22-introducing-the-infrastructure-bill-of-materials.html.md.erb
@@ -5,15 +5,15 @@ categories: security
 tags: security, integrations, open source
 image_title: '/images/blogimages/ibom.jpg'
 guest: true
-description: Pair IBoMs and SBoMs for a more secure software supply chain.
+description: Pair IBoMs and SBOMs for a more secure software supply chain.
 twitter_text: Introducing infrastructure bills of materials alongside software
   bills of materials can strengthen your software supply chain.
 ---
-All eyes are on software supply chain security and organizations are busily generating software bills of materials, or SBoMs. But many are leaving out an equally critical part of software supply chain security: their infrastructure. GitLab has partnered with Firefly to help DevOps teams create bills of materials across the entire cloud footprint. 
+All eyes are on software supply chain security and organizations are busily generating software bills of materials, or SBOMs. But many are leaving out an equally critical part of software supply chain security: their infrastructure. GitLab has partnered with Firefly to help DevOps teams create bills of materials across the entire cloud footprint. 
  
-The SBoM, which is an ingredient list that identifies third-party and open source code used within software (a.k.a. dependencies), came into the spotlight with the U.S. Executive Order on "Improving the Nation's Cybersecurity" and its resulting [NIST guidelines to secure the software supply chain](/blog/2022/03/29/comply-with-nist-secure-supply-chain-framework-with-gitlab/).
+The SBOM, which is an ingredient list that identifies third-party and open source code used within software (a.k.a. dependencies), came into the spotlight with the U.S. Executive Order on "Improving the Nation's Cybersecurity" and its resulting [NIST guidelines to secure the software supply chain](/blog/2022/03/29/comply-with-nist-secure-supply-chain-framework-with-gitlab/).
  
-While SBoMs begin to peel back the layers on risky code using elements such as [composition analysis](/handbook/engineering/development/sec/secure/composition-analysis/) to scan for dependencies in containers, more attention must be paid to how cloud infrastructure, a critical part of the software development lifecycle, is managed and secured.
+While SBOMs begin to peel back the layers on risky code using elements such as [composition analysis](/handbook/engineering/development/sec/secure/composition-analysis/) to scan for dependencies in containers, more attention must be paid to how cloud infrastructure, a critical part of the software development lifecycle, is managed and secured.
  
 ## Assessing cloud infrastructure
  
