Add gitlab-feature-flag-alert to engineering productivity responsible projects

--- a/sites/handbook/source/handbook/engineering/quality/engineering-productivity/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/quality/engineering-productivity/index.html.md.erb
@@ -146,6 +146,7 @@ The Engineering Productivity team uses [modified prioritization and planning gui
 1. [GitLab Dangerfiles] for shared [Danger](https://docs.gitlab.com/ee/development/dangerbot.html#danger-bot) rules and plugins.
 1. [GitLab Styles] for shared [RuboCop cops](https://docs.gitlab.com/ee/development/contributing/style_guides.html#ruby-rails-rspec).
 1. [GitLab Development Kit (GDK)] continued development.
+1. [GitLab feature flag alert] for reporting on GitLab feature flags.
 
 ## Active Quarter OKRs
 
@@ -240,3 +241,4 @@ This is a list of Engineering Productivity experiments where we identify an oppo
 [GitLab docs]: https://gitlab.com/gitlab-org/gitlab-docs
 [GitLab Dangerfiles]: https://gitlab.com/gitlab-org/ruby/gems/gitlab-dangerfiles
 [GitLab Styles]: https://gitlab.com/gitlab-org/ruby/gems/gitlab-styles
+[GitLab feature flag alert]: https://gitlab.com/gitlab-org/gitlab-feature-flag-alert
