Correct office hours for Product Intelligence

--- a/sites/handbook/source/handbook/engineering/development/analytics/product-intelligence/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/analytics/product-intelligence/index.html.md.erb
@@ -29,7 +29,7 @@ If you have any questions start by @ mentioning the product manager for the [Pro
 
 ### Office hours
 
-Every two weeks Product Intelligence team holds open office hours on Zoom for any questions that might arise. It's typically Thursdays for half an hour and alternates between 8:00 UTC and 15:00 UTC timeslots. You can find the event in the [GitLab Team Meetings calendar](/handbook/tools-and-tips/#gitlab-team-meetings-calendar).
+Every week Product Intelligence team holds open office hours on Zoom for any questions that might arise. It's typically Thursdays for half an hour and alternates between 8:00 UTC and 15:00 UTC timeslots. You can find the event in the [GitLab Team Meetings calendar](/handbook/tools-and-tips/#gitlab-team-meetings-calendar).
 
 ## Responsibilities
 
