Improve product stages and groups page discoverability

--- a/sites/handbook/source/handbook/product/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/index.html.md.erb
@@ -71,7 +71,7 @@ The Product Principles section is where you can learn about our strategy and phi
 
 For a detailed view on how we do Product Development, read up on our established Product Processes.
 
-### [**Product Categorization**](/handbook/product/categories/)
+### [**Product sections, stages, groups, and categories**](/handbook/product/categories/)
 
 To learn how the GitLab product and our Teams are organized review our Product Categorization section.
 
