Update Dev teams after reorg

--- a/sites/handbook/source/handbook/engineering/development/dev/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/dev/index.html.md.erb
@@ -22,7 +22,6 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 
 1. [Manage](/handbook/product/categories/#manage-stage)
   * [Manage:Authentication and Authorization](/handbook/engineering/development/dev/manage/authentication-and-authorization)
-  * [Govern:Compliance](/handbook/engineering/development/dev/manage/compliance)
   * [Manage:Foundations](/handbook/engineering/development/dev/manage/foundations/)
   * [Manage:Import](/handbook/engineering/development/dev/manage/import)
   * [Manage:Integrations](/handbook/engineering/development/dev/manage/integrations/)
@@ -46,10 +45,7 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 ### Manage
 
 #### Manage:Authentication and Authorization
-<%= direct_team(manager_role: 'Acting Engineering Manager, Manage:Authentication and Authorization') %>
-
-#### Govern:Compliance
-<%= direct_team(manager_role: 'Engineering Manager, Govern:Compliance') %>
+<%= direct_team(manager_role: 'Engineering Manager, Manage:Authentication and Authorization') %>
 
 #### Manage:Foundations
 <%= direct_team(manager_role: 'Engineering Manager, Manage:Foundations') %>
@@ -61,7 +57,7 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 <%= direct_team(manager_role: 'Engineering Manager, Manage:Import') %>
 
 #### Manage:Workspace
-<%= direct_team(manager_role: 'Interim Engineering Manager, Manage:Workspace') %>
+<%= direct_team(manager_role: 'Engineering Manager, Manage:Workspace') %>
 
 
 ### Plan
@@ -72,8 +68,11 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 #### Plan:Product Planning
 <%= direct_team(manager_role: 'Backend Engineering Manager, Plan:Product Planning') %>
 
+#### Plan:Certify
+<%= direct_team(manager_role: 'Backend Engineering Manager, Plan:Certify') %>
+
 #### Plan:Optimize
-<%= direct_team(manager_role: 'Interim Engineering Manager, Plan:Optimize') %>
+<%= direct_team(manager_role: 'Engineering Manager, Plan:Optimize') %>
 
 ### Create
 
@@ -92,8 +91,6 @@ The Dev sub-department is taking care of the first part of the DevSecOps Lifecyc
 #### Create:Code Review Frontend
 <%= direct_team(manager_role: 'Frontend Engineering Manager, Create:Source Code, Create:Code Review, Delivery & Scalability', role_regexp: /(?!Source Code)Code Review/) %>
 
-#### Gitaly
-<%= direct_team(manager_slug: 'tim-z', role_regexp: /Gitaly/) %>
 
 ## Stable Counterparts
 
