Move VS Code Extension to Editor

--- a/sites/handbook/source/handbook/product/categories/index.html.md.erb
+++ b/sites/handbook/source/handbook/product/categories/index.html.md.erb
@@ -284,6 +284,11 @@ Maybe we should make our features easier to search to replace the section below.
 #### [Code Review group](/handbook/product/categories/#code-review-group)
 
 - [Merge Requests](https://docs.gitlab.com/ee/user/project/merge_requests/)
+- [GitLab CLI](https://gitlab.com/gitlab-org/cli)
+
+#### [Editor group](/handbook/product/categories/#editor-group/)
+
+- [GitLab Workflow extension for Visual Studio Code](https://docs.gitlab.com/ee/user/project/repository/vscode.html)
 
 ### Other functionality in Verify
 
