--- a/sites/handbook/source/handbook/engineering/development/sec/govern/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/govern/index.html.md.erb
@@ -13,6 +13,7 @@ The Govern engineering groups are responsible for the [Govern Stage](/handbook/p
 
 * [Threat Insights](threat-insights/)
 * [Security Policies](security-policies/)
+* [Compliance](/handbook/engineering/development/dev/manage/compliance/)
 
 ## Vision
 
