--- a/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/sec/index.html.md.erb
@@ -12,7 +12,7 @@ description: >-
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-<%= devops_diagram(["Secure","Govern"]) %>
+<%= devops_diagram(%w(Secure Govern)) %>
 
 ## Teams and Handbook Pages
 
@@ -21,6 +21,7 @@ The following teams comprise the sub-department:
 - Govern stage - [handbook](/handbook/engineering/development/sec/govern/)
   - Security Policies group - [handbook](/handbook/engineering/development/sec/govern/security-policies/)
   - Threat Insights group - [handbook](/handbook/engineering/development/sec/govern/threat-insights/)
+  - Compliance group - [handbook](/handbook/engineering/development/dev/manage/compliance/)
 - Secure stage - [handbook](/handbook/engineering/development/sec/secure/)
   - Composition Analysis group - [handbook](/handbook/engineering/development/sec/secure/composition-analysis/)
   - Dynamic Analysis group - [handbook](/handbook/engineering/development/sec/secure/dynamic-analysis/)
@@ -91,7 +92,7 @@ We have two stage level calendars, [Secure Stage Calendar](https://calendar.goog
 
 Each group also has a calendar for team-based discussions, such as the our weekly group syncs.
 
-We encourage utilizing our available [Google Groups](https://groups.google.com/my-groups) instead of including inviduals as attendees when possible. Along with ensuring the event is represented on individual's calendars for visibility, new team members are automatically added to events (as well as removed when someone departs from a team). 
+We encourage utilizing our available [Google Groups](https://groups.google.com/my-groups) instead of including individuals as attendees when possible. Along with ensuring the event is represented on individual's calendars for visibility, new team members are automatically added to events (as well as removed when someone departs from a team).
 
 ## Staying Informed and Informing Team Members
 
@@ -187,15 +188,15 @@ GitLab’s Stance for Architectural issues: https://about.gitlab.com/handbook/en
 
 #### Team Representatives
 
-| Team                                                 | Representative                                                                   |
-|------------------------------------------------------|----------------------------------------------------------------------------------|
-| [Composition Analysis](secure/composition-analysis/) | <%= link_to_team_member('fcatteau') %>                                           |
-| [Security Policies](govern/security-policies/)       | <%= link_to_team_member('mparuszewski') %>                                       |
-| [Dynamic Analysis](secure/dynamic-analysis/)         | <%= link_to_team_member('cam_swords') %>                                         |
-| [Static Analysis](secure/static-analysis/)           | <%= link_to_team_member('theoretick') %>                                         |
-| [Threat Insights](govern/threat-insights/) BE        | <%= link_to_team_member('minac') %>                                              |
-| [Threat Insights](govern/threat-insights/) FE        | <%= link_to_team_member('svedova') %>                                            |
-| [Vulnerability Research](secure/vulnerability-research/)    | <%= link_to_team_member('idawson') %>, <%= link_to_team_member('julianthome') %> |
+| Team                                                     | Representative                                                                   |
+|----------------------------------------------------------|----------------------------------------------------------------------------------|
+| [Composition Analysis](secure/composition-analysis/)     | <%= link_to_team_member('fcatteau') %>                                           |
+| [Security Policies](govern/security-policies/)           | <%= link_to_team_member('mparuszewski') %>                                       |
+| [Dynamic Analysis](secure/dynamic-analysis/)             | <%= link_to_team_member('cam_swords') %>                                         |
+| [Static Analysis](secure/static-analysis/)               | <%= link_to_team_member('theoretick') %>                                         |
+| [Threat Insights](govern/threat-insights/) BE            | <%= link_to_team_member('minac') %>                                              |
+| [Threat Insights](govern/threat-insights/) FE            | <%= link_to_team_member('svedova') %>                                            |
+| [Vulnerability Research](secure/vulnerability-research/) | <%= link_to_team_member('idawson') %>, <%= link_to_team_member('julianthome') %> |
 
 ### Frontend Chapter (Slack [#secure-frontend-chapter](https://gitlab.slack.com/archives/C031RSQ72S2))
 
