Monitor:Respond Exciting Things and Accomplishments - October

--- a/sites/handbook/source/handbook/engineering/development/ops/monitor/respond/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/monitor/respond/index.html.md.erb
@@ -15,9 +15,10 @@ The **Respond** group at GitLab is responsible for building tools that enable De
 
 ## Exciting things and accomplishments
 This section details the happenings within the Respond group. At any given time this section will have the top exciting things and/or accomplishments of the team.
-1. The team shipped incident timeline [quick actions](https://gitlab.com/gitlab-org/gitlab/-/issues/368721), enabling the Infrastructure Team to adopt incident timelines.
-1. The team completed the [technical breakdown](https://gitlab.com/gitlab-org/monitor/respond/-/issues/143) for the Slack App for incident management and kicked off building the app.
-1. We presented at the [Monthly Product Direction Showcase](https://www.youtube.com/watch?v=DQgdiZXCPlA).  _(We talk about Incident Response at 36:00 and the Slack App at 39:26.)_
+1. We kicked off the development for the [Slack App for incident management](https://gitlab.com/groups/gitlab-org/-/epics/8545)!
+1. We started the donut bot, every other week team members are randomly paired with one another for a coffee chat. 
+1. We published a blog post; [How to leverage GitLab incident timelines](https://about.gitlab.com/blog/2022/10/18/gitlab-incident-timelines/)
+1. Our Error Budgets and Budget spent continues to stay green!
 
 ## Peformance Indicators
 The Respond Group’s mission is to decrease the frequency and severity of incidents. By helping our users respond to alerts and incidents with a streamlined workflow, and capturing useful artifacts for feedback and improvement, we can accomplish our mission. To get started, we need to establish an initial user base that we can learn from to improve and further grow the Monitor stage. We have prioritized the Incident Management category to obtain this usage. 
