Add Firdaws as SSC for B&SM group

--- a/sites/handbook/source/includes/product/_categories-names.erb
+++ b/sites/handbook/source/includes/product/_categories-names.erb
@@ -219,7 +219,7 @@
 [Vlad Stoianovici]: /company/team/#vlad-stoianovici
 [Alex Ives]: /company/team/#alexives
 [Barry Firman]: /company/team/#gitlabbarry
-
+[Firdaws Farukh]: /company/team/#ffarukh
 
 [Suri Patel]: /company/team/#suripatel
 [Chrissie Buchanan]: /company/team/#cbuchanan
