added link to ultimate guide to SBOMs

--- a/sites/uncategorized/source/blog/blog-posts/2022-08-30-the-ultimate-guide-to-software-supply-chain-security.html.md.erb
+++ b/sites/uncategorized/source/blog/blog-posts/2022-08-30-the-ultimate-guide-to-software-supply-chain-security.html.md.erb
@@ -80,7 +80,7 @@ GitLab has been at the leading edge of DevSecOps, helping organizations to evolv
 
 For instance, rather than being performed by security pros, using their own tools, at the end of the development cycle, security testing is automated within the CI pipeline with findings delivered to developers while they are still iterating on their code. Read how GitLab is also [revolutionizing CI and security, and remediation practices](/blog/2021/06/01/gitlab-is-setting-standard-for-devsecops/).
 
-GitLab is laser-focused on enabling organizations to establish and manage security and compliance guardrails that allow developers to run fast while also managing risk, including the introduction of [continuous compliance and policy engines](/blog/2022/02/09/gitlabs-newest-continuous-compliance-features-bolster-software/), as well as [automated attestation](/blog/2022/08/10/securing-the-software-supply-chain-through-automated-attestation/).
+GitLab is laser-focused on enabling organizations to establish and manage security and compliance guardrails that allow developers to run fast while also managing risk, including the introduction of [continuous compliance and policy engines](/blog/2022/02/09/gitlabs-newest-continuous-compliance-features-bolster-software/), as well as [automated attestation](/blog/2022/08/10/securing-the-software-supply-chain-through-automated-attestation/) and [SBOMs](/blog/2022/10/25/the-ultimate-guide-to-sboms/).
 
 The GitLab partner ecosystem helps the platform to meet even more security needs, including [generating SBOMs
 automatically](/blog/2022/03/16/gitlab-and-testify-sec-witness-alliance/) and [protecting software from malicious modules](/blog/2022/06/01/terraform-as-part-of-software-supply-chain-part1-modules-and-providers/).
@@ -92,6 +92,7 @@ More on GitLab’s software supply chain security vision can be found [here](/bl
   <iframe src="https://www.youtube.com/embed/HubJIQ-x2EA" frameborder="0" allowfullscreen="true"> </iframe>
 </figure>
 <!-- blank line -->
+
 
 ## Test your knowledge
 
