Update Commerce Integrations team data

--- a/sites/handbook/source/handbook/engineering/development/fulfillment/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/fulfillment/index.html.md.erb
@@ -36,7 +36,7 @@ In addition to the [Fulfillment Product Direction](https://about.gitlab.com/dire
 
 ### Fulfillment Sub-department People Leaders
 
-<% fulfillment_em = %w[jeromezng jameslopez csouthard rhardarson mlunoe shreyasagarwal] %>
+<% fulfillment_em = %w[jeromezng jameslopez csouthard rhardarson mlunoe shreyasagarwal isandin] %>
 <% fulfillment_em_members = Gitlab::Homepage::Team::Member.all!.find_all { |person| fulfillment_em.include?(person.anchor) } %>
 <%= partial('includes/team_member_table', locals: { team_members: fulfillment_em_members }) %>
 
@@ -71,6 +71,10 @@ In addition to the [Fulfillment Product Direction](https://about.gitlab.com/dire
 ### Fulfillment:Fulfillment Platform Team
 
 <%= department_team(base_department: "Fulfillment:Fulfillment Platform Team") %>
+
+### Fulfillment:Commerce Integrations
+
+<%= department_team(base_department: "Fulfillment:Commerce Integrations") %>
 
 ## Stable counterparts
 
