Update some stale sections

--- a/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-insights/index.html.md.erb
+++ b/sites/handbook/source/handbook/engineering/development/ops/verify/pipeline-insights/index.html.md.erb
@@ -54,13 +54,6 @@ classDiagram
 
 As part of the [FY22 SaaS First](https://about.gitlab.com/direction/#saas-first) investment theme and our committment to building a reliable service we use error budgets to track availability and help guide how much investment we make milestone to milestone in reliability. More information is shared on the [Ops Section Performance Indicators (internal handbook)](https://internal-handbook.gitlab.io/handbook/company/performance-indicators/product/ops-section/#verify-verifytesting---error-budget-for-gitlabcom).
 
-## Exciting things and accomplishments
-This section will list the top three most recent, exciting accomplishments from the team.
-
-- [Dmytro Biryukov](https://about.gitlab.com/company/team/#dbiryukov) has joined the team as our new Senior Backend Engineer. Welcome Dima! 
-- [**Code Coverage MR approval rule**](https://about.gitlab.com/releases/2021/07/22/gitlab-14-1-released/#code-coverage-merge-request-approval-rule) - 14.1 Milestone delivery to close out a highly upvoted issue requested by customers and internal customers alike.
-- [**Code Quality in MR Diff**](https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/#code-quality-violation-notices-in-mr-diffs) - 14.1 Milestone item to close out the epic and deliver an Ultimate feature before handing off the category to [SAST](https://about.gitlab.com/handbook/engineering/development/sec/secure/static-analysis/).
-
 ## Team Members
 The following people are permanent members of the Verify:Pipeline Insights group:
 
@@ -294,20 +287,10 @@ We want to create a welcoming environment for everyone who is interested in cont
 
 If an issue is being resolved in a merge request that is made by a [community contributor](https://about.gitlab.com/community/contribute/), the engineering manager will assign the associated issue to themselves to keep better track of it. The engineering manager will help to coach the community contributor through the merge request process, or be responsible for delegating that coaching to a team member engineer.
 
-### Surfacing technical concerns
-
-When an engineer discovers a potential technical concern (e.g. performance, scalability, usability, etc.), we encourage the engineer to surface that as soon as possible by creating an issue and labeling with `~performance`, `~usability`, etc. so we can avoid or mitigate future issues.
-
-As a ~~3~~ 6 month trial (ending in December 2021), we are going to be [using an epic to collect each issue created as a technical concern](https://gitlab.com/groups/gitlab-org/-/epics/6108).
-When creating an issue for this epic, the engineer details the problem as well as the potential severity of the issue so that we can properly prioritize the issue into future milestones.
-Once we schedule the issue, we remove the issue from [the technical concerns epic](https://gitlab.com/groups/gitlab-org/-/epics/6108) so that it can be placed in a more feature specific epic.
-After the 3 month trial is over, we will have a group retrospective to determine whether we should use this process permanently or not.
-
-### Meeting
-We meet on a weekly cadence for one synchronous meeting.
+### Meetings
 
 #### Pipeline Insights Group Weekly Meeting
-This synchronous meeting is to discuss anything that is blocking, or notable from the past week. This meeting acts as a team touchpoint.
+This synchronous meeting is to discuss anything that is blocking, or notable from the past week. This meeting acts as a team touchpoint. We have two sessions of this meeting each week - one for APAC/EMEA timezones and another for AMER timezones. We record each meeting so that everyone can benefit from the discussions asynchronously.
 
 #### Async Daily Standups
 We use [geekbot](https://geekbot.com/) integrated with Slack for our daily async standup. The purpose of the daily standup meeting is to keep the team informed about what everyone is working on, and to surface blockers so we can eliminate them. The standup bot will run at 10am in the team members local time and ask 2 questions:
